--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
   padding: 0;
 }
 
+/* all the site content besides celebration div */
 .content {
   display: flex;
   flex-direction: column;
@@ -54,6 +55,7 @@ h2 {
   gap: 96px;
 }
 
+/* options container */
 .options {
   display: flex;
   gap: 96px;
@@ -68,6 +70,7 @@ h2 {
   border: transparent;
 }
 
+/* make option a bit bigger on hover to indicate it's the current option */
 .option:hover {
   transform: scale(1.1);
   transition: transform 0.2s ease-in-out;
@@ -79,6 +82,7 @@ h2 {
   height: auto;
 }
 
+/* a bit of shadow when hovering on the option */
 .shadow:hover {
   -webkit-filter: drop-shadow(5px 5px 4px rgba(0, 0, 0, 0.9));
   filter: drop-shadow(5px 5px 4px rgba(0, 0, 0, 0.9));
@@ -89,6 +93,7 @@ h2 {
   filter: drop-shadow(5px 5px 4px rgba(255, 255, 255, 0.9));
 }
 
+/* media query to make it a bit mobile responsive */
 @media (max-width: 1000px) {
   .options {
     display: grid;
@@ -117,6 +122,8 @@ h2 {
   }
 }
 
+/* when the user wins, celebration div will be shown */
+/* credit to: Developer: "Piotr Galor" */
 .celebration {
   display: flex;
   width: 100vw;
